@@ -76,9 +76,30 @@ namespace gameswf
 			return;
 		}
 
-		int	target_frame = int(fn.arg(0).to_number() - 1);	// Convert to 0-based
+		// Flash tries to convert STRING to NUMBER,
+		// if the conversion is OK then Flash uses this NUMBER as target_frame.
+		// else uses arg as label of target_frame
+		// Thanks Francois Guibert
 
-		sprite->goto_frame(target_frame);
+		as_value& arg = fn.arg(0);
+		if (arg.get_type() == as_value::STRING)
+		{
+			double number_value;
+			// try as string as number
+			if (string_to_number(&number_value, arg.to_string()))
+			{
+		    sprite->goto_frame((int) number_value - 1);    // Convert to 0-based
+			}
+			else
+			{
+				sprite->goto_labeled_frame(arg.to_string());
+			}
+		}
+		else
+		{
+	    sprite->goto_frame(int(fn.arg(0).to_number() - 1));    // Convert to 0-based
+		}
+
 		sprite->set_play_state(movie_interface::PLAY);
 	}
 
@@ -91,9 +112,25 @@ namespace gameswf
 			return;
 		}
 
-		int	target_frame = int(fn.arg(0).to_number() - 1);	// Convert to 0-based
+		as_value& arg = fn.arg(0);
+		if (arg.get_type() == as_value::STRING)
+		{
+			double number_value;
+			// try as string as number
+			if (string_to_number(&number_value, arg.to_string()))
+			{
+		    sprite->goto_frame((int) number_value - 1);    // Convert to 0-based
+			}
+			else
+			{
+				sprite->goto_labeled_frame(arg.to_string());
+			}
+		}
+		else
+		{
+	    sprite->goto_frame(int(fn.arg(0).to_number() - 1));    // Convert to 0-based
+		}
 
-		sprite->goto_frame(target_frame);
 		sprite->set_play_state(movie_interface::STOP);
 	}
 
